CodeJB/log/err.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:301:27: error: expected ';' after expression
  model_pos->plotOn(frame)2;
                          ^
                          ;
././data.cc:301:27: warning: expression result unused [-Wunused-value]
  model_pos->plotOn(frame)2;
                          ^
Error in <ACLiC>: Dictionary generation failed!
